<resources>
    <string name="app_name" translatable="false">xFolio</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <!--APP NAVIGATION-->

    <string name="nav_all_coins">All Coins</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_portfolio">Portfolio</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>

    <!--GLOBAL COIN INFO-->

    <string name="header_total_market_cap">Total market cap</string>
    <string name="header_total_24h_volume">Total 24h volume</string>
    <string name="header_bitcoin_dominance">Bitcoin dominance</string>
    <string name="header_coins">Coins</string>
    <string name="header_tokens">Tokens</string>
    <string name="header_markets">Markets</string>
    <string name="header_last_updated">Last updated</string>

    <string name="error_no_server_connection">No server connection</string>

    <!--COIN LIST TOOLBAR MENU-->

    <string name="toolbar_menu_search">Search</string>
    <string name="toolbar_menu_search_hint">Name or symbol</string>
    <string name="toolbar_menu_sort">Sorting</string>


    <!--COIN DETAILS-->

    <string name="coin_details_tab_details">Details</string>
    <string name="coin_details_tab_markets">Markets</string>
    <string name="coin_details_tab_alarms">Alarms</string>

    <string name="coin_details_chart_1d">1D</string>
    <string name="coin_details_chart_7d">7D</string>
    <string name="coin_details_chart_1m">1M</string>
    <string name="coin_details_chart_6m">6M</string>
    <string name="coin_details_chart_1y">1Y</string>
    <string name="coin_details_chart_All">ALL</string>

    <string name="coin_details_rank">Rank</string>
    <string name="coin_details_price">Price</string>
    <string name="coin_details_market_cap">Market Cap</string>
    <string name="coin_details_volume_24h">Volume (24h)</string>
    <string name="coin_details_circulating_supply">Circulating Supply</string>
    <string name="coin_details_max_supply">Max Supply</string>
    <string name="coin_details_change_1h">Change 1h</string>
    <string name="coin_details_change_24h">Change 24h</string>
    <string name="coin_details_change7d">Change 7 Days</string>

    <string name="coin_alarm_price_above">Price above</string>
    <string name="coin_alarm_price_below">Price below</string>
    <string name="coin_alarm_price_above_error">Value can not be less than the current price.</string>
    <string name="coin_alarm_price_below_error">Value can not be more than the current price.</string>

    <string name="coin_alarm_clear">Clear</string>
    <string name="coin_alarm_change_prc_val_template">Change: %s\%% (%s)</string>

    <!--PREFERENCES - GENERAL-->
    
    <string name="pref_category_general">General</string>

    <string name="pref_general_app_language">Language</string>
    <string name="pref_general_language_auto">Auto</string>
    <string name="pref_general_language_en">English</string>
    <string name="pref_general_language_pl">Polish</string>
    <string name="pref_general_open">After run open…</string>
    <string name="pref_general_default_currency">Default currency</string>
    <string name="pref_general_night_mode">Night mode</string>

    <!--PREFERENCES - LISTS-->


    <string name="pref_category_coin_list">Coin lists</string>
    <string name="pref_list_order_by">Order by…</string>
    <string name="pref_coin_list_order_by_market_cap_dsc">Market Cap (High to Low)</string>
    <string name="pref_coin_list_order_by_market_cap_asc">Market Cap (Low to High)</string>
    <string name="pref_coin_list_order_by_price_dsc">Price (High to Low)</string>
    <string name="pref_coin_list_order_by_price_asc">Price (Low to High)</string>
    <string name="pref_coin_list_order_by_change_1h_dsc">Change 1h (High to Low)</string>
    <string name="pref_coin_list_order_by_change_1h_asc">Change 1h (Low to High)</string>
    <string name="pref_coin_list_order_by_change_24h_dsc">Change 24h (High to Low)</string>
    <string name="pref_coin_list_order_by_change_24h_asc">Change 24h (Low to High)</string>

    <string name="pref_list_change">Change</string>
    <string name="pref_list_change_summary">Show change from last: %s</string>
    <string name="pref_change_1h">1H</string>
    <string name="pref_change_24h">24H</string>
    <string name="pref_change_7d">7D</string>

    <!--OTHERS-->


    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="percent_template">%s\%%</string>
</resources>
