<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_coins"
            android:icon="@drawable/ic_show_chart_black_24dp"
            android:title="@string/nav_all_coins" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite_border_black_24dp"
            android:title="@string/nav_favorites" />
    </group>

    <group
        android:id="@+id/other">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/nav_about" />

    </group>

</menu>
